--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,12 +7,9 @@
 </div>
 
 <div class="ui text container">
-    <div class="ui segment form">
-        <div class="ui fluid action input">
-            <input type="text" name="title" placeholder="Что нужно сделать?" class="form-control" (keyup.enter)="addTodo(titleInput.value); titleInput.value = '' "  #titleInput>
-            <button class="ui primary button" (click)="addTodo(titleInput.value); titleInput.value = '' ">Добавить</button>
-        </div>
-    </div>
+    
+
+    <todo-form (added)="onTodoAdded($event)"></todo-form>
 
     <todo-list [todos]="todos"></todo-list>
 
